# remote-inventory

./: .env.example  .gitignore  BUILD.bazel  CHANGELOG.md  CLOUD_RUN_DEPLOYMENT.md  CONTRIBUTING.md  DEPLOYMENT.md  E2E_TESTING.md  FIREBASE_COMPLETE.md  FIREBASE_SETUP.md  FIREBASE_SETUP_SINGLE_APP.md  GCP_DEPLOY_CHECKLIST.md  LICENSE  MODULE.bazel  PROJECT_SELECTION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SPANNER_SETUP.md  STATUS.md  TESTING.md  UI_DESIGN.md  VISUAL_TESTING.md  WORKSPACE  auto-deploy.sh  bazel-bin  bazel-out  bazel-remote-inventory  bazel-testlogs  go.mod  go.sum  inventory_service.pb.go  inventory_service.pb.gw.go  inventory_service_grpc.pb.go  setup-deployment.sh  setup.sh  test-all.sh  test-e2e.sh  test-privacy-e2e.sh  test_backend.py
backend/: DISTANCE_BLUR.md  Dockerfile  GRPC_GATEWAY.md  Makefile  README.md  deploy.sh  go.mod  go.sum  inventory_service.pb.go  inventory_service.pb.gw.go  inventory_service_grpc.pb.go  setup-googleapis.sh  test-session.sh  test.sh
backend-bazel/: BUILD.bazel  main.go
backend-final/: go.mod  inventory_service.pb.go
backend-minimal/: go.mod  go.sum  inventory_service.pb.go  main.go  main.go.bak2
backend-python/: .dockerignore  Dockerfile  inventory_service_pb2.py  inventory_service_pb2_grpc.py  requirements.txt  restart.sh  server.py  test_spanner.py
consumer_app/: pubspec.yaml
proto/: BUILD.bazel  go.mod  inventory_service.proto  inventory_service.proto.bak
provider_app/: pubspec.yaml
scripts/: create_spanner_db.sh  drop_spanner_db.sh  generate_proto_dart.sh  setup_firebase.sh  setup_spanner.sh
tests/: README.md  e2e_grpcurl.sh  e2e_python.py  test-backend-grpcurl.sh  test_backend_simple.py  test_grpcurl.sh
ui-preview/: jarvis-provider.html
web-demo/: README.md  index.html
(+91 files in other folders)
