load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "inventory_proto",
    srcs = ["inventory_service.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "inventory_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/djgupt/remote-inventory/proto",
    proto = ":inventory_proto",
    visibility = ["//visibility:public"],
)
